Update for LLVM 17

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  clazy-1.11.tar.xz: 7ef0c6911703472e2479187f2cb1dc27a3a1fe91
+  clazy-master.tar.bz2: e6edc303f440ff9f5e59ce46b45bd62dd3972eed
