--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  clazy-master.tar.bz2: cdd7805537a32e29d3e193cc29c610f6354a0cbc
+  clazy-1.14.tar.bz2: 4ad1c4269f1cb156719a944d9dac924f0a8cbce1
